plugins {
	id "java"
	id "idea"
	id "jacoco"
	alias libs.plugins.postCompileWeaving
}

configurations {
	mockitoAgent
}

dependencies {
	implementation libs.bundles.awsLambda,
			project(":libs:common-services"),
			project(":libs:cimit-service"),
			project(":libs:cri-checking-service"),
			project(":libs:cri-response-service"),
			project(":libs:audit-service"),
			project(":libs:gpg45-evaluator"),
			project(":libs:verifiable-credentials"),
			project(":libs:user-identity-service"),
			project(":libs:evcs-service"),
			project(":libs:ais-service")

	compileOnly libs.lombok
	annotationProcessor libs.lombok

	testImplementation libs.hamcrest,
			libs.jacksonDatabind,
			libs.junitJupiter,
			libs.mockitoJunit,
			project(path: ':libs:common-services', configuration: 'tests'),
			project(path: ':libs:test-helpers')

	mockitoAgent(libs.mockitoCore) {
		transitive = false
	}

	testRuntimeOnly(libs.junitPlatform)
}

java {
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

test {
	useJUnitPlatform ()
	finalizedBy jacocoTestReport
	jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"
}

jacocoTestReport {
	dependsOn test
	reports {
		xml.required.set(true)
	}
}
